deps/v8/test/message/no-legacy-const-2.out
*%(basename)s:8: SyntaxError: Unexpected token const
const = 42;
^^^^^

SyntaxError: Unexpected token const
